--- a/index.html
+++ b/index.html
@@ -17,18 +17,35 @@
 
                     <div class="wrapper-header flex">
 
-                        <div class="logo">logo</div>
-                        <div class="lista">
-                        link
+                        <div class="logo">
+                            <img src="img/logo.svg" alt="">
                         </div>
-                        <div class="login">login</div>
+
+                        <div class="lista">
+                            <ul class="flex">
+                                <li><a href="Scarica">Scarica</a></li>
+                                <li><a href="Perchè Discord">Perchè Discord</a></li>
+                                <li><a href="Nitro">Nitro</a></li>
+                                <li><a href="Sicurezza">Sicurezza</a></li>
+                                <li><a href="Assistenza">Assistenza</a></li>
+                            </ul>
+                        </div>
+
+                        <div class="login">
+                            <button class="btn">Login</button>
+                        </div>
 
                      </div>
 
                 </div>
 
                 <div class="block1 flex">
-                    <div class="sfondo"></div>
+                    <div class="sfondo">
+                        <h1>Il tuo posto per parlare</h1>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos adipisci cumque officia culpa harum eaque sed labore consectetur recusandae beatae dolorum, voluptatibus eos distinctio cum nulla? Eaque, praesentium! Veritatis, recusandae.</p>
+                        <button class="btn"><a href="#">Scarica per Mac</a></button>
+                        <button class="btn"><a href="#">Apri Discord nel tuo browser</a></button>
+                    </div>
                 </div>
 
 
@@ -43,8 +60,14 @@
 
             <div class="block2 flex">
 
-                <div class="img2"></div>
-                <div class="testo2"></div>
+                <div class="img2">
+                    <img src="img/item1.svg" alt="item1">
+                </div>
+                
+                <div class="testo2">
+                    <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+                    <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+                </div>
 
             </div>
 
