--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <div class="img2">
                     <img src="img/item1.svg" alt="item1">
                 </div>
-                
+
                 <div class="testo2">
                     <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
                     <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
@@ -73,8 +73,14 @@
 
             <div class="block3 flex">
 
-                <div class="img3"></div>
-                <div class="testo3"></div>
+                <div class="img3">
+                    <img src="img/item2.svg" alt="item2">
+                </div>
+
+                <div class="testo3">
+                    <h2>Dove trovarsi è facile</h2>
+                    <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì e unirsi istantaneamente senza dover chiamare.</p>
+                </div>
 
             </div>
 
