--- a/index.html
+++ b/index.html
@@ -86,8 +86,13 @@
 
             <div class="block2 flex">
 
-                <div class="img2"></div>
-                <div class="testo2"></div>
+                <div class="img2">
+                    <img src="img/item3.svg" alt="item3">
+                </div>
+                <div class="testo2">
+                    <h2>Da pochi a un fandom</h2>
+                    <p>Dai inizio a una community con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati e molto altro.</p>
+                </div>
 
             </div>
 
