--- a/index.html
+++ b/index.html
@@ -98,7 +98,14 @@
 
             <div class="block5 flex">
 
-                <div class="img-big"></div>
+                <div class="img-big">
+                    <h2>TECNOLOGIA AFFIDABILE PER TENERSI IN CONTATTO</h2>
+                    <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+                    <img src="img/item4-big.svg" alt="">
+                    <h2> Pronto a iniziare la tua avventura?</h2>
+                    <button><a href="#">Scarica per Mac</a></button>
+
+                </div>
 
             </div>
 
