--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discord</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 
@@ -61,7 +62,7 @@
             <div class="block2 flex">
 
                 <div class="img2">
-                    <img src="img/item1.svg" alt="item1">
+                    <img class="img-box" src="img/item1.svg" alt="item1">
                 </div>
 
                 <div class="testo2">
@@ -74,7 +75,7 @@
             <div class="block3 flex">
 
                 <div class="img3">
-                    <img src="img/item2.svg" alt="item2">
+                    <img class="img-box" src="img/item2.svg" alt="item2">
                 </div>
 
                 <div class="testo3">
@@ -87,7 +88,7 @@
             <div class="block2 flex">
 
                 <div class="img2">
-                    <img src="img/item3.svg" alt="item3">
+                    <img class="img-box" src="img/item3.svg" alt="item3">
                 </div>
                 <div class="testo2">
                     <h2>Da pochi a un fandom</h2>
@@ -101,7 +102,7 @@
                 <div class="img-big">
                     <h2>TECNOLOGIA AFFIDABILE PER TENERSI IN CONTATTO</h2>
                     <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
-                    <img src="img/item4-big.svg" alt="">
+                    <img class="img-box" src="img/item4-big.svg" alt="">
                     <h2> Pronto a iniziare la tua avventura?</h2>
                     <button><a href="#">Scarica per Mac</a></button>
 
@@ -122,24 +123,157 @@
 
                 <div class="column-footer flex">
 
-                        <div class="li-big"></div>
-                        <div class="li"></div>
-                        <div class="li"></div>
-                        <div class="li"></div>
-                        <div class="li"></div>
+                        <div class="li-big">
+                            <h2 class="violet">Il tuo posto per parlare</h2>
+                                <div class="select flex">
+                                    <img id="ita" src="img/ita.png" alt="">
+                                    <select data-placeholder="Choose a Language...">
+                                        <option value="AF">Afrikaans</option>
+                                        <option value="SQ">Albanian</option>
+                                        <option value="AR">Arabic</option>
+                                        <option value="HY">Armenian</option>
+                                        <option value="EU">Basque</option>
+                                        <option value="BN">Bengali</option>
+                                        <option value="BG">Bulgarian</option>
+                                        <option value="CA">Catalan</option>
+                                        <option value="KM">Cambodian</option>
+                                        <option value="ZH">Chinese (Mandarin)</option>
+                                        <option value="HR">Croatian</option>
+                                        <option value="CS">Czech</option>
+                                        <option value="DA">Danish</option>
+                                        <option value="NL">Dutch</option>
+                                        <option value="EN">English</option>
+                                        <option value="ET">Estonian</option>
+                                        <option value="FJ">Fiji</option>
+                                        <option value="FI">Finnish</option>
+                                        <option value="FR">French</option>
+                                        <option value="KA">Georgian</option>
+                                        <option value="DE">German</option>
+                                        <option value="EL">Greek</option>
+                                        <option value="GU">Gujarati</option>
+                                        <option value="HE">Hebrew</option>
+                                        <option value="HI">Hindi</option>
+                                        <option value="HU">Hungarian</option>
+                                        <option value="IS">Icelandic</option>
+                                        <option value="ID">Indonesian</option>
+                                        <option value="GA">Irish</option>
+                                        <option value="IT">Italian</option>
+                                        <option value="JA">Japanese</option>
+                                        <option value="JW">Javanese</option>
+                                        <option value="KO">Korean</option>
+                                        <option value="LA">Latin</option>
+                                        <option value="LV">Latvian</option>
+                                        <option value="LT">Lithuanian</option>
+                                        <option value="MK">Macedonian</option>
+                                        <option value="MS">Malay</option>
+                                        <option value="ML">Malayalam</option>
+                                        <option value="MT">Maltese</option>
+                                        <option value="MI">Maori</option>
+                                        <option value="MR">Marathi</option>
+                                        <option value="MN">Mongolian</option>
+                                        <option value="NE">Nepali</option>
+                                        <option value="NO">Norwegian</option>
+                                        <option value="FA">Persian</option>
+                                        <option value="PL">Polish</option>
+                                        <option value="PT">Portuguese</option>
+                                        <option value="PA">Punjabi</option>
+                                        <option value="QU">Quechua</option>
+                                        <option value="RO">Romanian</option>
+                                        <option value="RU">Russian</option>
+                                        <option value="SM">Samoan</option>
+                                        <option value="SR">Serbian</option>
+                                        <option value="SK">Slovak</option>
+                                        <option value="SL">Slovenian</option>
+                                        <option value="ES">Spanish</option>
+                                        <option value="SW">Swahili</option>
+                                        <option value="SV">Swedish </option>
+                                        <option value="TA">Tamil</option>
+                                        <option value="TT">Tatar</option>
+                                        <option value="TE">Telugu</option>
+                                        <option value="TH">Thai</option>
+                                        <option value="BO">Tibetan</option>
+                                        <option value="TO">Tonga</option>
+                                        <option value="TR">Turkish</option>
+                                        <option value="UK">Ukrainian</option>
+                                        <option value="UR">Urdu</option>
+                                        <option value="UZ">Uzbek</option>
+                                        <option value="VI">Vietnamese</option>
+                                        <option value="CY">Welsh</option>
+                                        <option value="XH">Xhosa</option>
+                                    </select>
+                                </div>
+                                <div class="social">
+                                    <a href="#" class="fa fa-facebook"></a>
+                                    <a href="#" class="fa fa-twitter"></a>
+                                    <a href="#" class="fa fa-instagram"></a>
+                                    <a href="#" class="fa fa-youtube"></a>
+                                </div>
+                        </div>
+
+                        <div class="li">
+                            <ul>
+                                <li class="violet">Prodotto</li>
+                                <li>Scarica</li>
+                                <li>Perchè Discord</li>
+                                <li>Nitro</li>
+                                <li>Sicurezza</li>
+                                <li>Assistenza</li>
+                            </ul>
+                        </div>
+
+                        <div class="li">
+                            <ul>
+                                <li class="violet">Compagnia</li>
+                                <li>Chi Siamo</li>
+                                <li>Lavora con noi</li>
+                                <li>Marchio</li>
+                                <li>Redazione</li>
+                                <li>Negozio</li>
+                            </ul>
+                        </div>
+
+                        <div class="li">
+                            <ul>
+                                <li class="violet">Risorse</li>
+                                <li>Scarica</li>
+                                <li>Perchè Discord</li>
+                                <li>Nitro</li>
+                                <li>Sicurezza</li>
+                                <li>Assistenza</li>
+                                <li>Scarica</li>
+                                <li>Perchè Discord</li>
+                                <li>Nitro</li>
+                                <li>Sicurezza</li>
+                                <li>Assistenza</li>
+                            </ul>
+                        </div>
+                        <div class="li">
+                            <ul>
+                                <li class="violet">Norme</li>
+                                <li>Scarica</li>
+                                <li>Perchè Discord</li>
+                                <li>Nitro</li>
+                                <li>Sicurezza</li>
+                                <li>Assistenza</li>
+                            </ul>
+                        </div>
 
                 </div>                
                 
             </div>
 
 
-            <div>
+            <div class="wrapper-bottom-footer flex">
 
                 
-                <div class="wrapper-bottom-footer flex">
+                <div class="bottom-footer flex">
 
-                    <div class="logo2">logo</div>
-                    <div class="button">button</div>
+                    <div class="logo2">
+                        <img src="img/logo.svg" alt="">
+                    </div>
+                    <div>
+                        <button class="btn-footer btn">Registrati<a href="#"></a></button>
+                    </div>
 
                 </div>
 
